Fix PR15775 by removing old relay host/guest functionality.

* runtime/dyninst/print.c: Remove RELAY_{HOST,GUEST} functionality.
* runtime/linux/print.c: Ditto.
* runtime/print_flush.c: Ditto.
* runtime/transport/transport.c: Ditto.
* testsuite/systemtap.printf/sharedbuf.exp: Removed.
* man/stap.1.in: Removed RELAY_{HOST,GUEST} mention.
* man/systemtap.8.in: Ditto.